--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "containerjsquerie",
+  "name": "container_js_query",
   "version": "0.0.1",
   "description": "a javascript package to use css @container queries",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "build": "tsup src/index.js --format cjs,esm --dts"
   },
   "author": "DevCarlosAugusto",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^30.2.0"
+    "@vitest/browser": "^4.0.18",
+    "jsdom": "^28.0.0",
+    "tsup": "^8.5.1",
+    "vitest": "^4.0.18"
   }
 }
