--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD with GithuB Actions and Vitest to Unit Test
+name: CI/CD Pipeline
 
 on:
   push:
@@ -12,8 +12,8 @@ on:
 
 jobs:
   test_and_build:
+    name: 🧪 Unit Tests
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,7 +24,37 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Run Integration Tests (Vitest)
-        run: npm test
+      - name: Run Tests (Detailed)
+        run: npm test -- --reporter=verbose --reporter=github-actions
+
+      - name: Build Package
+        run: npm run build
+
+  publish_to_npm:
+    name: 🚀 Publish to NPM
+    needs: test_and_build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Package
+        run: npm run build
+
+      - name: Publish to NPM
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
