--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,60 +2,65 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
-      - dev
+    branches: [main, dev]
   pull_request:
-    branches:
-      - main
-      - dev
+    branches: [main, dev]
 
 jobs:
-  test_and_build:
-    name: 🧪 Unit Tests & Build check
+  quality_check:
+    name: 🧹 Lint & Format
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+      - run: npm ci
+      - name: Run Prettier Check
+        run: npm run format:check
+      - name: Run ESLint
+        run: npm run lint
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Integration Tests (Vitest Detailed)
+  test_and_build:
+    name: 🧪 Unit Tests
+    needs: quality_check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - run: npm ci
+      - name: Run Vitest (Detailed)
         run: npm test -- --reporter=verbose --reporter=github-actions
-
-      - name: Build Package Verification
+      - name: Build Package
         run: npm run build
 
-  publish_to_npm:
-    name: 🚀 Publish to NPM
+  publish_and_release:
+    name: 🚀 Semantic Release & NPM
     needs: test_and_build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    permissions:
+      contents: write
+      id-token: write
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
+      - run: npm run build
 
-      - name: Build Package
-        run: npm run build
-
-      - name: Publish to NPM
-        run: npm publish --access public
+      - name: Semantic Release
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
