--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - name: Run Prettier Check
+        run: npm run format
         run: npm run format:check
       - name: Run ESLint
         run: npm run lint
