--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
       - name: Run Prettier Check
-        run: npm run format
         run: npm run format:check
       - name: Run ESLint
         run: npm run lint
@@ -32,8 +32,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - run: npm ci
-      - name: Run Vitest (Detailed)
+      - name: Install dependencies
+        run: npm ci
+      - name: Run Vitest
         run: npm test -- --reporter=verbose --reporter=github-actions
       - name: Build Package
         run: npm run build
@@ -43,11 +44,9 @@ jobs:
     needs: test_and_build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
     permissions:
       contents: write
       id-token: write
-
     steps:
       - uses: actions/checkout@v4
         with:
@@ -56,10 +55,10 @@ jobs:
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
-
-      - run: npm ci
-      - run: npm run build
-
+      - name: Install and Build
+        run: |
+          npm ci
+          npm run build
       - name: Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
