--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "container-media-polyfill",
+  "name": "@devcarlosaugusto/container-media-polyfill",
   "version": "0.1.1",
   "description": "A lightweight JavaScript polyfill to support CSS @container queries in older browsers.",
   "main": "./dist/index.js",
