--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,32 +2,65 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev]
+  pull_request:
+    branches: [main, dev]
 
 jobs:
-  build_and_publish:
+  quality_check:
+    name: 🧹 Lint & Format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          node-version: '20'
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run Prettier Check
+        run: npm run format:check
+      - name: Run ESLint
+        run: npm run lint
 
+  test_and_build:
+    name: 🧪 Unit Tests
+    needs: quality_check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run Vitest
+        run: npm test -- --reporter=verbose --reporter=github-actions
+      - name: Build Package
+        run: npm run build
+
+  publish_to_npm:
+    name: 🚀 Publish to NPM
+    needs: test_and_build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    permissions:
+      contents: write
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install and Build
+        run: |
+          npm ci
+          npm run build
 
-      - name: Run Tests
-        run: npm test
-
-      - name: Build
-        run: npm run build
-
-      # Automatiza o aumento da versão e o commit no GitHub
       - name: Bump Version and Commit
         run: |
           git config --global user.name "github-actions[bot]"
@@ -35,8 +68,8 @@ jobs:
           npm version patch -m "chore: bump version to %s [skip ci]"
           git push origin main --tags
 
-      # Publicação direta que você confirmou que funciona
       - name: Publish to NPM
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
