FIX: update package scope and fix json syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Necessário para fazer push da tag de versão
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -72,4 +75,3 @@ jobs:
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
